# my_package2

./: .gitignore  CMakeLists.txt  README.txt  package.xml
description/: building_robot.sdf  lidarbot_modelURDF.sdf  sensor_tutorial.sdf
description/config/: lidarbot_config2.rviz  ros_gz_bridge1.yaml
description/worlds/: world_demo.sdf
launch/: gazebo_lidar.launch.py  gz_rviz.launch.py  lidar_launch.launch.py
lidar_node/: CMakeLists.txt  lidar_node.cc
